# zakupki_ink

./: .thumbnail  CLAUDE.md  DEPLOY.md  README.md  catalog.json  index.html  letterhead-data.js  manifest.webmanifest  nev-chem.json  nev_data.json  sw.js  tcalc-chem.json  Архитектура меню аналитики.dc.html  Инструкция Shtark Flow-print.html  Инструкция Shtark Flow.html  Калькулятор  NEV.dc.html  Калькулятор NEV.dc.html  Калькулятор NEV.standalone.html  Презентация Shtark Flow-print.html  Презентация Shtark Flow.html  Результат калькулятора.dc.html
export/: catalog-chem.json  sebest-chem.json  Калькулятор NEV.dc.html
github/: .gitignore  README.md
js/core/: bi_engine.js  (+6 more)
nev-calculator/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
nev-calculator/nev_calc/: __init__.py  __main__.py  calculator.py  catalog.py  cli.py  models.py  pricing.py  rates.py
nev-calculator/nev_calc/data/: nev_data.json
nev-calculator/tests/: conftest.py  test_calculator.py  test_pricing.py  test_rates.py
shtark-flow/: CLAUDE.md  README.md  index.html  robots.txt  sw.js  Калькулятор NEV.dc.html
uploads/: calculator_v7 - Калькулятор технолога.csv  source_files-1782570648576.docx  Дерево июнь.xlsx  Для расчета GM май 2026 (1).xlsx  Задание на отбор (размещение) товара № КА-930 от 09.06.2026.xlsx  Калькулятор_NEV_v9 (1).xlsx  Отчёт маржа 1-16 Июня_2026.xlsx  Расходы клиентам_май.xlsx  Реализация товаров № КА-109 от 26.06.2026.xlsx  СС вып продукции 06.xlsx  Себестоимость ШК (2).xlsx  Себестоимость ШК - Сентябрь 2024.csv  Себестоимость ШК.xlsx  для ИИ 16.06.2026.xlsx
(+4 files in other folders)
